--- a/auth-service.yml
+++ b/auth-service.yml
@@ -2,7 +2,7 @@ spring:
   data:
     mongodb:
       host: auth-mongodb
-      username: user
+      username: user_db
       password: ${MONGODB_PASSWORD}
       database: auth_db
       port: 27017
